MacViewsBrowser: Introduce browser_window_views_mac.h - helper functions

We are going to have some code that needs to work either with
(mac_views_browser) views browser windows or Cocoa browser windows.
Before r530907 mac_views_browser builds managed to always get a nil
BrowserWindowController. That worked with objc_msgSend even though
it was never linked in. But r530907 adds a static method call, which
wants the BrowserWindowController @implementation.

We need a way to disallow browser_window_controller.h from being
included at all, before it can be phased out.

This CL sets up a file to help consumers that need to work with both
browser window types to remove their browser_window_controller.h
dependencies. For now, it's used enough just to fix the
mac_views_browser compile regression.

Bug: 804674
Change-Id: I0ce2b94a8d74c8f3f8b7dacec580366819c5aa29
Reviewed-on: https://chromium-review.googlesource.com/880426
Reviewed-by: Elly Fong-Jones <ellyjones@chromium.org>
Commit-Queue: Trent Apted <tapted@chromium.org>
Cr-Commit-Position: refs/heads/master@{#531387}