chrome/browser/ui/cocoa/browser_window_views_mac.mm
@@ -1,0 +1,17 @@
+FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
+// Copyright 2018 The Chromium Authors. All rights reserved.
+// Use of this source code is governed by a BSD-style license that can be
+// found in the LICENSE file.
+
+#import "chrome/browser/ui/cocoa/browser_window_views_mac.h"
+
+// Currently this file is only linked in when all browser windows are views, so
+// the implementations just return null.
+
+BrowserWindowController* BrowserWindowControllerForWindow(NSWindow* window) {
+  return nullptr;
+}
+
+TabWindowController* TabWindowControllerForWindow(NSWindow* window) {
+  return nullptr;
+}
