chrome/browser/ui/cocoa/share_menu_controller.mm
@@ -16,6 +16,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "chrome/browser/ui/browser_window.h"
 #import "chrome/browser/ui/cocoa/accelerators_cocoa.h"
 #import "chrome/browser/ui/cocoa/browser_window_controller.h"
+#import "chrome/browser/ui/cocoa/browser_window_views_mac.h"
 #import "chrome/browser/ui/cocoa/fast_resize_view.h"
 #import "chrome/browser/ui/cocoa/last_active_browser_cocoa.h"
 #include "chrome/grit/generated_resources.h"
@@ -157,7 +158,7 @@ NSString* const kRemindersSharingServiceName =
   windowForShare_ = browser->window()->GetNativeWindow();
 
   TabWindowController* tabWindowController =
-      [TabWindowController tabWindowControllerForWindow:windowForShare_];
+      TabWindowControllerForWindow(windowForShare_);
   NSView* contentsView = [tabWindowController tabContentArea];
   NSRect rectInWindow =
       [[contentsView superview] convertRect:[contentsView frame] toView:nil];
